Database implementation done
